# Teste

./: .gitignore  API178.py  Dockerfile  install_and_run.sh  package.json  pyproject.toml  requirements.txt  teste.txt
.ssh/: README.md
saam_rotina178/: __init__.py  server.py
saam_rotina178.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
