[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saam-rotina178"
version = "0.1.0"
description = "Servidor MCP da Rotina 1.7.8 do SAAM"
authors = [
  { name = "Seu Nome", email = "seu@email.com" }
]
dependencies = [
  "mcp>=0.3.0",
  "httpx>=0.27.0"
]
requires-python = ">=3.9"

[project.scripts]
saam-rotina178 = "saam_rotina178.server:main"
